alignment fixes

--- a/src/components/sidenav/sidenav.styles.css
+++ b/src/components/sidenav/sidenav.styles.css
@@ -31,12 +31,14 @@ body {
 .wrapper .header .header-menu .title {
   color: #fff;
   font-size: 25px;
-  text-transform: uppercase;
-  font-weight: 900;
+  font-weight: 400;
   background-color: rgb(26, 124, 180);
-  padding: 1rem;
+  padding: 1.2rem 0;
   position: relative;
   right: 1.1rem;
+  cursor: pointer;
+  padding-right: 4.4rem;
+  padding-left: 2rem;
 }
 
 .wrapper .header .header-menu .title span {
@@ -84,7 +86,7 @@ body {
 
 .wrapper .sidebar {
   z-index: 1;
-  background-color: #2f323a;
+  background-color: #1c1e22;
   position: fixed;
   top: 70px;
   width: 250px;
